--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "clsx": "^2.1.1",
     "date-fns": "latest",
     "lucide-react": "^0.454.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
     "react-day-picker": "^9.4.3",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "latest"
